# AegisMem

./: .env.example  README.md  alembic.ini  pyproject.toml
adapters/embeddings/: backend.py
adapters/graph_store/: neo4j_store.py
adapters/llm/: __init__.py  anthropic_client.py  base.py  factory.py  mock_client.py  ollama_client.py  openai_client.py
adapters/relational_store/: models.py  postgres_store.py
adapters/vector_store/: base.py  qdrant_store.py
aegismem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/: dependencies.py  eval_router.py  main.py  routers.py  schemas.py
apps/worker/: __init__.py  tasks.py
core/config/: settings.py
core/exceptions/: __init__.py  exceptions.py
core/logging/: logger.py
core/schemas/: memory.py
domain/evaluations/: evaluator.py
domain/memory/: relevance.py  reranker.py  scoring.py
examples/simple_chat_memory/: demo.py
infra/compose/: docker-compose.yml
infra/docker/: Dockerfile
scripts/: demo_ollama.py  run_local_eval.py
services/: consolidation_service.py  contradiction_service.py  ingest_service.py  reflect_service.py  retrieve_service.py  update_service.py
tests/: conftest.py
tests/api/: test_api.py
tests/fixtures/: conftest.py
tests/integration/: test_ingest_retrieve.py
tests/unit/: test_consolidation.py  test_schemas.py  test_scoring.py
