[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegismem"
version = "0.1.0"
description = "Persistent Memory Architecture for Long-Running LLM Agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "AegisMem Contributors" }]

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    # Cache / queue
    "redis>=5.0.3",
    "celery>=5.3.6",
    # LLM providers
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "tiktoken>=0.7.0",
    # Embeddings
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    # Vector store
    "qdrant-client>=1.9.0",
    # Graph store
    "neo4j>=5.20.0",
    # Agent integration
    "langgraph>=0.1.0",
    "langchain-core>=0.2.0",
    # Observability
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "prometheus-client>=0.20.0",
    "python-json-logger>=2.0.7",
    # Utilities
    "tenacity>=8.3.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "typer>=0.12.3",
    "python-ulid>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "ruff>=0.4.7",
    "black>=24.4.2",
    "factory-boy>=3.3.0",
    "faker>=25.3.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.26",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["apps*", "core*", "domain*", "adapters*", "services*", "infra*"]
